<unreleased> Jim Winstead <jimw@mysql.com> (4.002)
* Add implementation of foreign_key_info() (Bug #26604, original patch from
  Dave Rolsky, and final implementation based on Connector/J code)

2007-1-8 Jim Winstead <jimw@mysql.com> Patrick Galbraith <patg@grazr.com> (4.001)
* Fix handling of unsigned integer values in result sets when using
  server-side prepared statements (they were not retrieved at all).
* Fix handling of signed integer values when using server-side prepared
  statements (they were being forced to unsigned values).
* Do not tell Perl that the contents of binary fields are UTF-8.
  [rt.cpan.org #22123], original patch by Joost Diepenmaat
* Fix double-free of bound parameters when freeing statements. (Bug #20559)
* Make sure to handle "magical" values in a couple of places. (Bug #20104)
* Update the hints about what to do when zlib is found missing while
  linking. (Bug #13803, reported by Philip Stoev)
* Explicitly initialize the MySQL client library to avoid possible race
  conditions in a multithreaded application. (Bug #21792)
* Fix warning when no connection attributes are passed to the connect
  method (Bug #17323, reported by Phil Randal)
* Removed redundant warnings when commit or rollback is called while
  AutoCommit is enabled. [rt.cpan.org #15802], reported by Tyler MacDonald
* Report correct type for decimal columns from MySQL 5.0 and later
  [rt.cpan.org #18294], reported by Ray Zimmerman
* Fix t/40bindparam.t to work when ANSI_QUOTES SQL_MODE is set.
  [rt.cpan.org #21521], reported by David Wheeler
* Return a statement handle with an error when column_info is called on
  a table that does not exist. (Bug #23974, patch by Philip Stoev)
* Fix handling of table names with characters that did not match /\w/ in
  the column_info method. (Bug #22005, reported by Philip Stoev)
* Fix handling of negative integers bound to a column marked as SQL_INTEGER.
  [rt.cpan.org #18976], patch from Mike Schilli.