@@ -1,4 +1,6 @@
 <unreleased> Jim Winstead <jimw@mysql.com> (4.002)
+* Return the correct table type for both tables and views from the table_info()
+  method. (Bug #26603, original patch from Dave Rolsky)
 * Add implementation of foreign_key_info() (Bug #26604, original patch from
   Dave Rolsky, and final implementation based on Connector/J code)
 
